footer by nhanh1

--- a/index.html
+++ b/index.html
@@ -267,8 +267,9 @@
     </section>
     <!-- Feature -->
     <section id="Feature">
-        
+
     </section>
+    <section>footer by nhanh1</section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
