footer by nhanh2

--- a/index.html
+++ b/index.html
@@ -267,9 +267,10 @@
     </section>
     <!-- Feature -->
     <section id="Feature">
-        
+
     </section>
 
+    <section>day la footer cua nhanh2</section>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
