footer update by nhanh1

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <section id="Feature">
 
     </section>
-    <section>footer by nhanh1</section>
+    <footer>footer update by nhanh1</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
