--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
     </section>
 
-    <section>day la footer cua nhanh2</section>
+    <footer>footer update by nhanh2</footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
